# Stream

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  TODOS.md  cli.py  mistral.md  pyproject.toml  pytest.ini  requirements.txt  runner.py
config/: prompts.yaml  servers.yaml
core/: clients.py  config.py  logger.py  logging.py  text.py
pipelines/: __init__.py  base.py  fictive.py  pipeline.py  pipeline_aphp.py  pipeline_brest.py  report.py  scenario.py
pipelines/aphp/: __init__.py  constants.py  fictive.py  loader.py  managment.py  pipeline.py  prompt.py  report.py  sampler.py  scenario.py
pipelines/aphp/referentials/: Affections chroniques.parquet  REFERENTIEL_METHODE_DIM_CANCER_20140411__ACTES_CCAM_CHIMIOTHERAPIE.parquet  REFERENTIEL_METHODE_DIM_CANCER_20140411__APP_ORG_PATIENT.parquet  REFERENTIEL_METHODE_DIM_CANCER_20140411__APP_ORG_SEJOUR.parquet  REFERENTIEL_METHODE_DIM_CANCER_20140411__Actes_CCAM_RADIOTHERAPIE.parquet  REFERENTIEL_METHODE_DIM_CANCER_20140411__CODES_CIM-10_CANCER.parquet  Tableau récapitulatif traitement cancer__Feuille_1.parquet  Tableau récapitulatif traitement cancer__Feuille_2.parquet  ccam_actes_2024.parquet  cim_2024.parquet  dictionnaire_spe_racine.parquet  ghm_rghm_regroupement_2024.parquet  stat_racines.parquet
pipelines/aphp/referentials/CIM_ATIH_2025/: LIBCIM10MULTI.parquet
pipelines/aphp/scripts/: convert_referentials.py
pipelines/brest/: __init__.py  constants.py  fictive.py  pipeline.py  report.py  sampler.py  scenario.py
tests/: __init__.py  test_pipelines.py
